--- a/web/index.html
+++ b/web/index.html
@@ -18,41 +18,41 @@
     }
   </style>
   <script type="module">
-    fetch('http://localhost:2000/movies')
+    let moviesCopy = [];
+  
+    fetch('https://fetch-api.fly.dev/movies')
       .then(res => res.json())
       .then(movies => {
-        const html = movies.map(movie => {
-          return `
-            <article data-id="${movie.id}">
-              <h2>${movie.title}</h2>
-              <img src="${movie.poster}" alt="${movie.title}">
-              <p>${movie.year}</p>
+        moviesCopy = [...movies]; // Copia de los datos
+        renderMovies(moviesCopy);
+      });
+  
+    function renderMovies(movies) {
+      const html = movies.map(movie => {
+        return `
+          <article data-id="${movie.id}">
+            <h2>${movie.title}</h2>
+            <img src="${movie.poster}" alt="${movie.title}">
+            <p>${movie.year}</p>
+            <button>Eliminar</button>
+          </article>
+        `;
+      }).join('');
+      document.querySelector('main').innerHTML = html;
+    }
+  
+    document.addEventListener('click', e => {
+  if (e.target.matches('button')) {
+    const article = e.target.closest('article');
+    const id = article.dataset.id;
 
-              <button>Eliminar</button>
-            </article>
-          `
-        }).join('')
-
-        document.querySelector('main').innerHTML = html
-
-        document.addEventListener('click', e => {
-          if (e.target.matches('button')) {
-            const article = e.target.closest('article')
-            const id = article.dataset.id
-
-            fetch(`http://localhost:2000/movies/${id}`, {
-              method: 'DELETE'
-            })
-              .then(res => {
-                if (res.ok) {
-                  article.remove()
-                }
-              })
-            }
-          
-        })
-      })
+    // Eliminar solo el elemento correspondiente
+    moviesCopy = moviesCopy.filter(movie => movie.id.toString() !== id);
+    renderMovies(moviesCopy); // Actualiza la vista
+  }
+});
   </script>
+  
 </head>
 <body>
   <main></main>
